add collectors to list